# trendy

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
app/: Home.py
app/components/: branding.py  candidate_table.py  filters.py  next_action.py  status_actions.py
app/pages/: 1_Portal.py  1_Portál.py  2_Kandidat.py  3_Pokrytie.py  4_Pipeline.py  5_Nastavenia.py
src/trendy/: briefing.py  config.py  db.py  lifecycle.py  llm.py  pipeline.py  scheduler.py  scoring.py  seeds.py
src/trendy/sources/: _claude.py  ahrefs.py  base.py  clusters.py  gsc.py  labor_market.py  llm_probe.py  paa.py  profesia.py  reddit.py  rss.py  sitemap.py  trends.py
tests/: conftest.py  test_briefing.py  test_merge.py  test_needs_volume.py  test_next_action.py  test_scheduler.py  test_scoring_lifecycle.py  test_seeds.py  test_setup.py  test_sitemap.py  test_sources.py  test_trends.py
