[project]
name = "trendy"
version = "0.1.0"
description = "Trend topic discovery tool for msg-life.sk, msgtester.sk, msgprogramator.sk"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.45",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.16",
    "pydantic-settings>=2.9",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "apscheduler>=3.11",
    "python-dotenv>=1.1",
    "plotly>=6.1",
    "python-slugify>=8.0",
    "praw>=7.8.1",
    "google-genai>=1.0",
    "trendspy>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trendy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
